# Challenges-Cpp

Algorithms and Data Structures/AverageRating/: CMakeLists.txt  main.cpp
Algorithms and Data Structures/CircularBuffer/: CMakeLists.txt  main.cpp
Algorithms and Data Structures/DoubleBuffer/: CMakeLists.txt  main.cpp
Algorithms and Data Structures/FilteringPhoneNumbers/: CMakeLists.txt  main.cpp
Algorithms and Data Structures/FrequentElement/: CMakeLists.txt  main.cpp
Algorithms and Data Structures/PairwiseAlgorithm/: CMakeLists.txt  main.cpp
Algorithms and Data Structures/PriorityQueue/: CMakeLists.txt  main.cpp
Algorithms and Data Structures/SelectAlgorithm/: CMakeLists.txt  main.cpp
Algorithms and Data Structures/TextHistogram/: CMakeLists.txt  main.cpp
Algorithms and Data Structures/TransformNumbers/: CMakeLists.txt  main.cpp
Algorithms and Data Structures/ZipALgorithm/: CMakeLists.txt  main.cpp
Concurrency/CustomerService/: CMakeLists.txt  main.cpp
Concurrency/ParallelMinMax/: CMakeLists.txt  main.cpp
Concurrency/ParallelMinMaxAsync/: CMakeLists.txt  main.cpp
Concurrency/ParallelSort/: CMakeLists.txt  main.cpp
Concurrency/ParallelTransform/: CMakeLists.txt  main.cpp
Concurrency/ThreadSafeLogging/: CMakeLists.txt  main.cpp
Date Time/DaysBetweenDates/: CMakeLists.txt  main.cpp
Date Time/MeasuringFunction/: CMakeLists.txt  main.cpp
Language Features/2dArray/: CMakeLists.txt  array2d.h  main.cpp
Language Features/AddingRange/: CMakeLists.txt  main.cpp
Math/AbundantNumbers/: main.cpp  (+1 more)
Math/ValidateISBN/: CMakeLists.txt  main.cpp
(+30 files in other folders)
